# reactos

./: CMakeLists.txt  toolchain-clang.cmake
base/applications/: CMakeLists.txt
base/applications/drwtsn32/: main.cpp  stacktrace.cpp
base/applications/rapps/: available.cpp
base/applications/testapp/: CMakeLists.txt  calc.h  prog.rc  winmain.c
base/setup/lib/: bootsup.c  fsutil.c  registry.c  settings.c
base/setup/usetup/: usetup.c
base/shell/explorer/: precomp.h  resource.h  syspager.cpp  trayprop.cpp  traywnd.cpp
boot/: CMakeLists.txt
boot/armllb/: CMakeLists.txt  boot.s  crtsupp.c  envir.c  fw.c  generic.cmake  main.c  versatile.cmake
boot/armllb/hw/: keyboard.c  matrix.c  serial.c  time.c  video.c
boot/armllb/hw/omap3-beagle/: hwinfo.c  hwinit.c  hwuart.c
boot/armllb/hw/omap3-zoom2/: hwinfo.c  hwinit.c  hwlcd.c  hwsynkp.c  hwtwl40x.c  hwuart.c
boot/armllb/hw/versatile/: boot.S  hwclcd.c  hwinfo.c  hwinit.c  hwkmi.c  hwuart.c
boot/armllb/include/: precomp.h
boot/armllb/os/: loader.c
boot/bootdata/: hivedef.inf  hivesft.inf  hivesys.inf  livecd.ini  txtsetup.sif
boot/freeldr/freeldr/: CMakeLists.txt  linuxboot.c
boot/quibble/: CMakeLists.txt  OLDCMakeLists.txt
boot/quibble/gnu-efi/aarch64/: efibind.h
boot/quibble/src/: boot.c  hw.c  menu.c  misc.h  peload.h  quibble.h  quibblearm.asm  reg.h
boot/reactosefi/: CMakeLists.txt
boot/reactosefi/efiloader/: bootmgr.h  entry.c
boot/reactosuefi/: CMakeLists.txt
boot/reactosuefi/core/: entry.c  misc.c
boot/reactosuefi/include/: reactosuefi.h
boot/rosefi/: CMakeLists.txt  debug.c  entry.c  rosefi.txt  time.c
boot/rosefi/display/: eficonsolelib.c  eficonsolelib.h  gop.c  gui.c  gui.h
boot/rosefi/drivers/: keyboard.c
boot/rosefi/include/: rosefi.h  rosefip.h
boot/rosefi/include/uefi/: uefierror.h  uefigop.h  uefispec.h
boot/rosefi/lib/comm/: cport.h  debug.h  pcdebug.h  rs232.c
boot/rosefi/lib/comm/i386/: debug.c
boot/rosefi/lib/fs/uefidefault/: uefifilesystem.c
boot/rosefi/lib/input/: keyboard.c
boot/rosefi/lib/mm/: efimm.c  mm.h
boot/rosefi/loader/: entry.c  misc.c
boot/rosefi/loader/display/: eficonsolelib.c  eficonsolelib.h  gop.c
boot/rosefi/loader/include/: uefiloader.h  uefiloaderp.h
boot/rosefi/ntldr/: winldr.c  winldr.h
dll/appcompat/apphelp/: hsdb.c  shimeng.h
dll/directx/: CMakeLists.txt
dll/directx/wine/: CMakeLists.txt
dll/ntdll/: CMakeLists.txt
dll/ntdll/csr/: connect.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/include/: ntdllp.h
dll/ntdll/rtl/: libsupp.c
dll/opengl/opengl32/: wgl.c
dll/shellext/shellbtrfs/: recv.cpp
dll/win32/: CMakeLists.txt
dll/win32/comctl32/: CMakeLists.txt
dll/win32/dbghelp/: compat.h  dbghelp.c
dll/win32/imm32/: ime.c
dll/win32/iphlpapi/: iphlpapi_main.c
dll/win32/jscript/: jsstr.c  jsval.h
dll/win32/kernel32/: CMakeLists.txt  kernel32.spec
dll/win32/msgina/: lsa.c  shutdown.c
dll/win32/mshtml/: htmlstyle.c  msvc.S
dll/win32/msvcrt/: msvcrt.spec  stubs.c
dll/win32/msxml3/: xslpattern.h
dll/win32/oleaut32/: typelib.c
dll/win32/psapi/: psapi.c
dll/win32/rsaenh/: sha2.c
dll/win32/shell32/: CMakeLists.txt  iconcache.cpp  shldataobject.cpp  stubs.cpp
dll/win32/syssetup/: wizard.c
dll/win32/uxtheme/: themehooks.c
dll/win32/wbemprox/: builtin.c
drivers/base/bootvid/: common.c  precomp.h
drivers/bus/pcix/: pdo.c
drivers/filesystems/: CMakeLists.txt
drivers/filesystems/apfs/: CMakeLists.txt
drivers/filesystems/btrfs/: btrfs_drv.h  xxhash.c
drivers/filesystems/fs_rec/: CMakeLists.txt  apfs.c  btrfs.h  ext2.h  ffs.h  fs_rec.c  fs_rec.h  reiserfs.h
drivers/filesystems/npfs/: npfs.h
drivers/ksfilter/ks/: swenum.c
drivers/sac/driver/: sacdrv.h
drivers/usb/usbccgp/: descriptor.c  fdo.c  function.c  misc.c  pdo.c  usbccgp.c
drivers/usb/usbd/: usbd.c
drivers/usb/usbehci/: hardware.h  usbehci.c  usbehci.h
drivers/usb/usbhub/: ioctl.c  pnp.c  power.c  usbhub.c
drivers/usb/usbohci/: hardware.h  usbohci.h
drivers/usb/usbport/: device.c  endpoint.c  iface.c  ioctl.c  iso.c  pnp.c  power.c  queue.c  roothub.c  trfsplit.c  urb.c  usb2.c  usbport.c  usbport.h
drivers/usb/usbstor/: descriptor.c  disk.c  error.c  fdo.c  misc.c  pdo.c  queue.c  scsi.c  usbstor.c  usbstor.h
drivers/usb/usbstor_new/: usbstor.h
drivers/usb/usbuhci/: hardware.h  usbuhci.h
drivers/usb/usbxhci/: CMakeLists.txt  dbg_xhci.h  debug.c  hardware.h  pusbxhci.c  pusbxhci.h  roothub.c  usbxhci.c  usbxhci.h  usbxhcip.c  usbxhcip.h  xhcispec.h
hal/halarm/: CMakeLists.txt  apple.cmake  generic.cmake  halapple.cmake  stub.cmake  versa.cmake
hal/halarm/apple/: halapple.rc  halinit.c
hal/halarm/applesilicon/: halapple.rc  halinit.c
hal/halarm/generic/: halinit.c  pic.c  processor.c  spinlock.c  stub.c  timer.c  usage.c
hal/halarm/generic/arm/: cache.S
hal/halarm/include/: gic.h
hal/halx86/: CMakeLists.txt  acpi.cmake  halmacpi.cmake  halmp.cmake  legacy.cmake  smp.cmake
hal/halx86/acpi/: halacpi.c  madt.c
hal/halx86/apic/: apic.c  apicp.h  apicsmp.c  apictimer.c  halinit.c  processor.c
hal/halx86/generic/: up.c
hal/halx86/include/: apic.h  madt.h  smp.h
hal/halx86/legacy/: halpcat.c
hal/halx86/mp/: mps.c
hal/halx86/smp/: ipi.c  mpmemory.c  smp.c  smpp.h
media/inf/: CMakeLists.txt  audio.inf  hal.inf  shortcuts.inf  syssetup.inf  usbport.inf
modules/: CMakeLists.txt
ntoskrnl/: CMakeLists.txt  ntos.cmake  ntoskrnl.spec
ntoskrnl/cache/section/: fault.c
ntoskrnl/ex/: resource.c  sysinfo.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/include/internal/: ex.h  mm.h  ntoskrnl.h  spinlock.h
ntoskrnl/io/iomgr/: deviface.c  driver.c
ntoskrnl/io/pnpmgr/: pnpnotify.c
ntoskrnl/kd64/: kddata.c
ntoskrnl/ke/: dpc.c  mp.c  wait.c
ntoskrnl/mm/: balance.c  pagefile.c  rmap.c  section.c
ntoskrnl/ob/: oblife.c  obname.c
ntoskrnl/po/: power.c
ntoskrnl/ps/: apphelp.c  job.c
ntoskrnl/rtl/: libsupp.c
ntoskrnl/se/: token.c
sdk/cmake/: config.cmake  host-tools.cmake  msvc.cmake
subsystems/: CMakeLists.txt
win32ss/include/: ntgdityp.h  ntuser.h
win32ss/reactx/: CMakeLists.txt
(+476 files in other folders)
